hphp/hack/test/typecheck/array_map_filter/array_map10.php
<?hh // strict

function test<TA, TB, TC>((function(TA): TB) $f, vec<TC> $x): void {
  array_map($f, $x);
}
